--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,3 +1,8 @@
+ <!--navbar top in bootstrap -->
+
+ 
+ 
+ <!-- Data table for patient entries -->
  <table datatable class="row-border hover">
     <thead>
       <tr>
@@ -69,3 +74,80 @@
       </tr>
     </tbody>
   </table>
+
+  <!-- Div tag for reg_forms -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title">Patient Registration</h3>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Patient ID</label>
+                <input type="text" class="form-control" id="exampleInputID" aria-describedby="emailHelp" placeholder="Enter Patient ID">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Patient Name</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Patient Age</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Patient's Age">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputPassword1">Registration Date</label>
+                <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Enter registration date">
+              </div>
+              <div class="form-group">
+                <label for="exampleFormControlSelect1">Select Patient Disease</label>
+                <select class="form-control" id="exampleFormControlSelect1">
+                  <option>Fever</option>
+                  <option>Abdominal Pain</option>
+                  <option>Fever</option>
+                  <option>Typhoid</option>
+                  <option>Diarohea</option>
+                  <option>Maleria</option>
+                  <option>Coughing</option>
+                  <option>Cough</option>
+                  <option>Abdominal Pain</option>
+                  <option>Headaches</option>
+                  <option>Allergies</option>
+                  <option>cold and flu</option>
+                </select>
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- End of div tag for reg_forms -->
+
+
+  <!-- form for expense calculation -->
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <div class="card">
+          <div class="card-header">
+            <h3 class="card-title">Patient Expense Calculation</h3>
+          </div>
+          <div class="card-body">
+            <form>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Patient's Info</label>
+                
+              </div>
+              <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
