--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -139,15 +139,32 @@
           <div class="card-body">
             <form>
               <div class="form-group">
-                <label for="exampleInputEmail1">Patient's Info</label>
-                
+                <label for="exampleInputEmail1">Medicine Name</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
               </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Medicine Amount</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Test Name</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Test Amount</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
+              </div>
+              <div class="form-group">
+                <label for="exampleInputEmail1">Other charges</label>
+                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
+              </div>
+              <button type="submit" class="btn btn-primary">Generate Expense</button>
             </form>
           </div>
         </div>
       </div>
     </div>
   </div>
+  <!-- End of Expense Calculation form -->
 
 
