--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,115 +1,39 @@
  <!-- Data table for patient entries -->
 
- <table datatable class="row-border hover">
+ <div class="container">
+
+  <input type="text" name="search" placeholder="search here" style="width:500px" />
+  <br>
+  <br>
+  <table datatable class="row-border hover" >
     <thead>
       <tr>
         <th>Patient ID</th>
         <th>Patient name</th>
+        <th>Patient Age</th>
         <th>Registration Date</th>
+        <th>Disease</th>
+        <th>Tests</th>
+        <th>Edit<span class="glyphicon glyphicon-pencil"></span></th>
+
       </tr>
     </thead>
     <tbody>
       <tr *ngFor='let p of Patient'>
-        <td>{{p._id}}</td>
+        <td >{{p._id}}</td>
         <td>{{p.PatientName}}</td>
-        <td>29/03/2022</td>
-      </tr >
+        <td>{{p.PatientAge}}</td>
+        <td>{{p.RegistrationDate}}</td>
+        <td>{{p.Disease}}</td>
+        <td>{{p.Tests}}</td>
+        <th>{{p.Edit}}<span class="glyphicon glyphicon-pencil"></span></th>
+      </tr>
     </tbody>
   </table>
+ </div>
 
-  <!-- Div tag for reg_forms -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Patient Registration</h3>
-          </div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Patient ID</label>
-                <input type="text" class="form-control" id="exampleInputID" aria-describedby="emailHelp" placeholder="Enter Patient ID">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Patient Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Patient Age</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Patient's Age">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputPassword1">Registration Date</label>
-                <input type="date" class="form-control" id="exampleInputPassword1" placeholder="Enter registration date">
-              </div>
-              <div class="form-group">
-                <label for="exampleFormControlSelect1">Select Patient Disease</label>
-                <select class="form-control" id="exampleFormControlSelect1">
-                  <option>Fever</option>
-                  <option>Abdominal Pain</option>
-                  <option>Fever</option>
-                  <option>Typhoid</option>
-                  <option>Diarohea</option>
-                  <option>Maleria</option>
-                  <option>Coughing</option>
-                  <option>Cough</option>
-                  <option>Abdominal Pain</option>
-                  <option>Headaches</option>
-                  <option>Allergies</option>
-                  <option>cold and flu</option>
-                </select>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End of div tag for reg_forms -->
+ <!-- Create popup form in angular  -->
+<div>
 
-
-  <!-- form for expense calculation -->
-  <div class="container">
-    <div class="row">
-      <div class="col-md-6">
-        <div class="card">
-          <div class="card-header">
-            <h3 class="card-title">Patient Expense Calculation</h3>
-          </div>
-          <div class="card-body">
-            <form>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Medicine Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Medicine Amount</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Test Name</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Test Amount</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <div class="form-group">
-                <label for="exampleInputEmail1">Other charges</label>
-                <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter patient name">
-              </div>
-              <button type="submit" class="btn btn-primary">Generate Expense</button>
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- End of Expense Calculation form -->
-
-  <!-- declaration of array in angular-->
-  
-
-
+</div>
+ 
