--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,21 +1,25 @@
 .grid-container {
-  margin: 20px;
+  margin: 10px;
+}
+body {
+padding-left: 10px;
 }
 
-.dashboard-card {
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  right: 15px;
-  bottom: 15px;
-}
+.column1 {
+  border: 3px solid blue;
+padding-top: 10px;
+margin: 5px;
 
-.more-button {
-  position: absolute;
-  top: 5px;
-  right: 10px;
 }
+.column2 {
+  border: 3px solid blue;
 
-.dashboard-card-content {
-  text-align: center;
+  padding-top: 10px;
+  margin: 5px;
+}
+.column3 {
+  border: 3px solid blue;
+
+  padding-top: 10px;
+  margin: 5px;
 }
