--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -1,17 +1,29 @@
-.sidenav-container {
-  height: 100%;
-}
-
 .sidenav {
   width: 200px;
+ background-color:azure;
 }
 
 .sidenav .mat-toolbar {
-  background: inherit;
+text-align: center;
+
 }
 
-.mat-toolbar.mat-primary {
-  position: sticky;
-  top: 0;
-  z-index: 1;
+.mat-nav-list{
+  text-align: center;
+  font-weight: bold;
+}
+.mat-sidenav-content{
+  text-align: center;
+  padding-top: 20px;
+  font-weight: 900;
+  background-color: lightblue;
+  padding-bottom: 20px;
+
+}
+.main{
+  padding-left: 50px;
+  height: 100px;
+  background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS6hNE6HftzxKSrsB_48s3fJgtMsn4bvqyokw&usqp=CAU);
+font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
