--- a/src/app/table/table.component.css
+++ b/src/app/table/table.component.css
@@ -1,1 +1,33 @@
+th, td 
+  {
+    padding: 15px;
+    text-align: left;
+  }
 
+  tr:hover {background-color: rgb(238, 200, 139);}
+
+  table 
+    {
+    border-collapse: collapse;
+    width: 600px;
+    padding-left: 10px;
+    
+    }
+  table, td, th 
+  {  
+    border: 1px solid #ddd;
+    text-align: left;
+    
+    
+  }
+  div{
+    padding-left: 55px;
+    padding-top: 30px;
+    box-shadow: 1px 2px 10px 1px   black;
+    width:700px;
+    align-items: center;
+    padding-bottom: 30px;
+    padding-right: 55px;
+
+    
+  }
