--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,15 +5,18 @@
     padding-left: 25%;
     padding-top: 25%;
     
+    
 }
 
 .mb-3{
     color: rgb(58, 19, 95);
     font-size:x-large;
     
+    
 }
 .submit{
     background-color: rgb(81, 38, 125);
+    margin-bottom: 10%;
     width: 200px;
     height: 50px;
     font-size: xx-large;
@@ -35,10 +38,20 @@
     bottom: 0;
     left: 0;
     right: 0;
- 
+}
+.main
+{
+    text-align: center;
+    background-color: azure;
 }
 
-
+.container
+{
+    border: 2px solid black;
+    width: 600px;
+    margin-left: 300px;
+    box-shadow: 1px 2px 10px 1px   black;
+}
 
 
 
