--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,32 +1,40 @@
+<div class="main">
+<h1 style="font-weight: bold;">PATIENT MANAGEMENT SYSTEM</h1>
+</div>
 <!-- Login Page -->
 <div class="card">
     <div class="row">
         <div class="col-md-6">
             <div class="card-1">
-
-                    <form  class="container" >
+                    <form class="container" >
                         <div class="mb-3">
-                            <h1>Login</h1>
+                            <h2>Login</h2>
                             <h5>Please enter your username & password</h5>
                         </div>
                         <div class="mb-3">
                             <label for="email">UserName :&nbsp;&nbsp; </label>
                             <input type="email" id="username"  name="email" [(ngModel)]="email" /><br>
-   
                         </div>
                         <br>
                         <div class="mb-3">
                             <label for="password">Password  :&nbsp;&nbsp; </label>
                             <input type="password" id="password"   name="password" [(ngModel)]="password" />
-                           
                         </div><br>
-                        <input type="submit" id="submit" value="log in" class="submit" (click)="login()">
+                        <input type="submit" id="submit" value="Log in" class="submit" (click)="login()">
+                        <footer class="page-footer font-small blue" style="padding-bottom: 30px;">
+                        <div class="footer-copyright text-center py-3">© 2022 Copyright:
+                        <a href="/"> MDBootstrap.com</a>
+                        </div>
+                        </footer>
+                        
                     </form>
-                <p>{{Message}}</p>
+                    
             </div>
         </div>
     </div>
+    
 </div>
+
 
 
 
