--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,44 +1,39 @@
-<div class="main">
-<h1 style="font-weight: bold;">PATIENT MANAGEMENT SYSTEM</h1>
-</div>
 <!-- Login Page -->
 <div class="card">
     <div class="row">
+        <div>
+ 
+            <h1 style="border:2px solid black;padding:10px;text-align:center;background-color:black;font-weight:900;color: white;box-shadow: 1px 2px 10px 1px  black; width: 180%;">PATIENT MANAGEMENT SYSTEM</h1>
+           <img src="https://www.freeiconspng.com/uploads/hospital-icon-2.png">
+
+        </div>
+
         <div class="col-md-6">
             <div class="card-1">
-                    <form class="container" >
+
+                    <form  class="container" >
                         <div class="mb-3">
-                            <h2>Login</h2>
-                            <h5>Please enter your username & password</h5>
+                            <h2>LOGIN</h2>
+                            <h2>Please enter your Username & Password</h2>
                         </div>
                         <div class="mb-3">
                             <label for="email">UserName :&nbsp;&nbsp; </label>
                             <input type="email" id="username"  name="email" [(ngModel)]="email" /><br>
+   
                         </div>
                         <br>
                         <div class="mb-3">
                             <label for="password">Password  :&nbsp;&nbsp; </label>
                             <input type="password" id="password"   name="password" [(ngModel)]="password" />
+                           
                         </div><br>
-                        <input type="submit" id="submit" value="Log in" class="submit" (click)="login()">
-                        <footer class="page-footer font-small blue" style="padding-bottom: 30px;">
-                        <div class="footer-copyright text-center py-3">© 2022 Copyright:
-                        <a href="/"> MDBootstrap.com</a>
-                        </div>
-                        </footer>
-                        
+                        <input type="submit" id="submit" value="Login" class="submit" (click)="login()">
                     </form>
-                    
+                   
+              <div>
+                  <h3 style="margin-top:100px;margin-left:300px;width: 600px;font-weight:900; ">Copyright@Patient Management System</h3>
+              </div>
             </div>
         </div>
     </div>
-    
 </div>
-
-
-
-
-
-
-
-    
