--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,22 +3,18 @@
     text-align: center;
     width: 500px;
     padding-left: 25%;
-    padding-top: 25%;
-    
+    padding-top: -10%;
     
 }
 
 .mb-3{
     color: rgb(58, 19, 95);
     font-size:x-large;
-    
-    
 }
 .submit{
-    background-color: rgb(81, 38, 125);
-    margin-bottom: 10%;
-    width: 200px;
-    height: 50px;
+    background-color: rgb(69, 11, 128);
+    width: 150px;
+    height: 40px;
     font-size: xx-large;
     font-family: lato;
     color: rgb(242, 243, 247);
@@ -28,6 +24,7 @@
     color: rgb(254, 253, 255);
 }
 .row{
+    background-image: url(https://www.tegbirsidhu.com/upload/background1.jpg);
     background-size: cover;
     background-position: center;
     top: 0%;
@@ -38,20 +35,20 @@
     bottom: 0;
     left: 0;
     right: 0;
+    top:0;
+ 
 }
-.main
-{
-    text-align: center;
-    background-color: azure;
-}
-
-.container
-{
-    border: 2px solid black;
-    width: 600px;
-    margin-left: 300px;
+.container{
+    border: 1px solid black;
+    width: 500px;
+    padding-bottom: 10px;
+    margin-left: 350px;
     box-shadow: 1px 2px 10px 1px   black;
 }
-
-
-
+img{
+    width: 150px;
+    height: 150px;
+    margin-left: 700px;
+    padding-top: 20px;
+  
+}
